--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
+    "firebase": "^11.7.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sweetalert2": "^11.21.2",
+    "sweetalert2-react-content": "^5.1.0",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
